# WEngine-v1

./: .clang-format  .gitignore  CMakeLists.txt  WObject.h  make.py  version.h
cmake/: IncVersion.cmake  IncVersionImp.cmake  TryDownload.cmake
header_parser/: lexer.py
src/: main.cpp
src/UI/: UI.h
src/World/: Camera.cpp  Camera.h  Light.cpp  Light.h  WActor.cpp  WActor.h  WComponent.cpp  WComponent.h  WObject.cpp  WObject.h  World.cpp  World.h  __gen.py
src/core/: CoreSystem.h  core.h
src/core/imp/: ISystem.h  Property.h  WFS.hpp  data.h  function.hpp  lockfreelist.h  nlohmannjson.hpp  spinlocker.h  task_job_system.h  thread_pool.h  wmath.h
src/graphic/: Map.h  Material.h  Mesh.h  Texture.h
src/render/: RenderSystem.h
src/render/rhi_helpers/: IRHIHelper.h  opengl.h
src/render/window_bridges/: IRHIBridge.h  winapi_opengl.h
src/render/window_helper/: IWindowHelper.h  winapi.h
